增加可以直接指定cookie，而不用输入密码 取消通过音量键控制翻页 解决MobSDK构建错误

--- a/app/MobSDK.gradle
+++ b/app/MobSDK.gradle
@@ -3,6 +3,7 @@ apply plugin: 'com.mob.sdk'
 MobSDK {
     appKey "12112614fca5f"
     appSecret "9c55055a1a63e8120c4773a077c42aaa"
+    spEdition "fp"
     ShareSDK {
         devInfo {
             SinaWeibo {
